--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -1062,6 +1062,106 @@ img{
 }
 // repo end;
 
+// univer start;
+.univer{
+	width:100%;
+	height:800px;
+	background:url(../img/teachbg01.png) no-repeat center center;
+	background-size:cover;
+	.tit{
+		color:$white;
+	}
+	.inner{
+		width:100%;
+		height:auto;
+		overflow:hidden;
+		.univer-list{
+			float:left;
+			width:50%;
+			padding-top:150px;
+			text-align:center;
+			.pic{
+				font-size:120px;
+				line-height: 120px;
+				color:$white;
+				.book::before{
+					content:'\e60b';
+				}
+				.edit::before{
+					content:'\e635';
+				}
+			}
+			.name{
+				font-size:32px;
+				height:32px;
+				margin-top:150px;
+				color:$white;
+			}
+			a{
+				display: block;
+				width:105px;
+				height:30px;
+				line-height: 30px;
+				font-size:16px;
+				text-align:center;
+				color:$white;
+				border:1px solid $white;
+				border-radius:15px;
+				margin:100px auto 0;
+			}
+		}
+	}
+}
+// univer end;
+
+// learn start;
+.learn{
+	width:100%;
+	height:auto;
+	.inner{
+		overflow:hidden;
+		position: relative;
+		margin:60px 0;
+		.left{
+			width:865px;
+			height:auto;
+			padding:60px 375px 90px 60px;
+			background:$footbg;
+			.l-tit{
+				font-size: 18px;
+				line-height: 48px;
+				color:$tcolorb;
+			}
+			.l-in{
+				font-size:14px;
+				color:$tcolorb;
+				line-height: 34px;
+			}
+		}
+		.right{
+			width:500px;
+			height:auto;
+			background:$white;
+			border-radius:20px;
+			padding:27px;
+			position:absolute;
+			right:0;
+			top:50px;
+			.pic{
+				border-radius:20px;
+				border:3px solid $footbg;
+				padding:30px;
+				img{
+					border-radius: 20px;
+					overflow:hidden;
+					height: auto;
+				}
+			}
+		}
+	}
+}
+// learn end;
+
 // media query;
 @media only screen and (max-width: 1200px){
 	.header-pc{
@@ -1217,6 +1317,32 @@ img{
 		.inner{
 			.report-list{
 				width:50%;
+			}
+		}
+	}
+	.univer{
+		height:600px;
+		.inner{
+			.univer-list{
+				padding-top:50px;
+				.name{
+					margin-top:50px;
+				}
+				a{
+					margin-top:50px;
+				}
+			}
+
+		}
+	}
+	.learn{
+		.inner{
+			.left{
+				width:100%;
+				padding:60px;
+			}
+			.right{
+				display: none;
 			}
 		}
 	}
@@ -1429,6 +1555,40 @@ img{
 			}
 		}
 	}
+	.univer{
+		height:auto;
+		.inner{
+			.univer-list{
+				padding-top:20px;
+				.pic{
+					font-size:80px;
+					line-height: 80px;
+				}
+				.name{
+					font-size:24px;
+					height:24px;
+					margin-top:25px;
+				}
+				a{
+					margin-bottom:25px;
+				}
+			}
+		}
+	}
+	.learn{
+		.inner{
+			margin:30px 0;
+			.left{
+				padding:30px;
+				.l-tit{
+					line-height:36px; 
+				}
+				.l-in{
+					line-height: 26px;
+				}
+			}
+		}
+	}
 }
 @media only screen and (max-width: 440px){
 	.tit{
@@ -1633,6 +1793,27 @@ img{
 		.inner{
 			.intro{
 				width:98%;
+			}
+		}
+	}
+	.univer{
+		.inner{
+			.univer-list{
+				float:none;
+				width:100%;
+				padding-top:5px;
+				.pic{
+					font-size: 50px;
+					line-height: 50px;
+				}
+				.name{
+					font-size: 20px;
+					line-height: 20px;
+					margin-top: 10px;
+				}
+				a{
+					margin:15px auto;
+				}
 			}
 		}
 	}
