--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -324,6 +324,13 @@ img{
 }
 // road end;
 
+// home-r start;
+.home-r{
+	background:url('../img/homebg.png') no-repeat center center;
+	height:900px;
+}
+// home-r end;
+
 // forest start;
 .forest{
 	width:100%;
@@ -1162,6 +1169,84 @@ img{
 }
 // learn end;
 
+// fload start;
+.fload{
+	width:100%;
+	height:auto;
+	.inner{
+		padding:60px 75px;
+		position:relative;
+		.pro{
+			overflow:hidden;
+			z-index: 1;
+			.pic{
+				float:left;
+				width:520px;
+				margin-right:40px;
+				border-radius:20px;
+				overflow:hidden;
+				img{
+					transition: all 0.3s ease 0s;
+					height:auto;
+				}
+				&:hover{
+					img{
+						transform: scale(1.05,1.05);
+					}
+				}
+			}
+			.intro{
+				font-size: 16px;
+				line-height: 36px;
+				color:$tcolorg;
+				margin-top:15px;
+				float:left;
+				width:calc(60% - 40px);
+				max-width:425px;
+				a{
+					width:105px;
+					height:30px;
+					line-height: 30px;
+					font-size: 16px;
+					color:$tcolorg;
+					text-align:center;
+					border-radius: 15px;
+					border:1px solid $tcolorg;
+					display: block;
+					margin-top: 20px;
+					transition: all 0.3s ease 0s;
+					&:hover{
+						background:$tcolorg;
+						color: $white;
+					}
+
+				}
+			}
+			&:nth-of-type(2){
+				z-index: 2;
+				margin-top: -60px;
+				.pic{
+					float:right;
+					width:615px;
+				}
+				.intro{
+					float:left;
+					width:calc(100% - 655px);
+					max-width:425px;
+					margin-top:100px;
+				}
+			}
+		}
+		.tobuy{
+			font-size:28px;
+			color:$tcolorg;
+			margin:120px auto 95px;
+			text-align: center;
+		}
+	}
+}
+// fload end;
+
 // media query;
 @media only screen and (max-width: 1200px){
 	.header-pc{
@@ -1388,7 +1473,8 @@ img{
 		}
 	}
 	.culture,.road{
-		height:600px;
+		height:auto;
+		padding-bottom:20px;
 		.tit{
 			padding-top:30px;
 		}
@@ -1621,7 +1707,6 @@ img{
 		}
 	}
 	.culture,.road{
-		height:700px;
 		.inner{
 			line-height: 22px;
 		}
