--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -1,10 +1,14 @@
 $darkred:#3d231e;
+$tcolord:#999999;
 $tcolorg:#666666;
 $tcolorb:#333333;
 $twhite:#dbdbdb;
 $backb:#1e1e1e;
 $white:#ffffff;
 $footbg:#eeeeee;
+$backg:#353535;
+$grayb:#505050;
+$tbackw:#f6f6f6;
 
 
 @font-face {
@@ -1247,6 +1251,168 @@ img{
 }
 // fload end;
 
+// up start;
+.up{
+	width:100%;
+	height:1200px;
+	overflow:hidden;
+	.wf-wrap{
+		position: relative;
+	}
+	.left{
+		width:33.33%;
+		float:left;
+		height:100%;
+		.name{
+			padding-top:170px;
+			background:$white;
+			font-size:28px;
+			color:$tcolorb;
+			padding-bottom:25px; 
+		}
+		.pic{
+			width:100%;
+			height:625px;
+		}
+		.intro{
+			background:$backg;
+			color:$tcolord;
+			font-size:20px;
+			line-height: 34px;
+			padding:10px 40px;
+		}
+	}
+	.center{
+		width:33.33%;
+		float:left;
+		height:100%;
+		background:$grayb;
+		.tit{
+			color:$white;
+			height:190px;
+		}
+		.cen-intro{
+			color:$tcolord;
+			font-size:18px;
+			line-height: 36px;
+			padding:0 45px;
+		}
+		.right{
+			width:3000px;
+			height:auto;
+
+		}
+	}
+	.right{
+		width:3000px;
+		height:100%;
+		position:absolute;
+		left:66.66%;
+		background:none;
+		.r-t,.r-c,.r-b{
+			background:$tbackw;
+			height:535px;
+			padding-top:270px;
+			p{
+				width:400px;
+				padding:0 40px;
+				line-height: 34px;
+				font-size: 18px;
+				color:$tcolord;
+			}
+			.t-tit{
+				font-size: 24px;
+				margin-bottom:15px;
+			}
+		}
+		.r-c{
+			height:290px;
+			background:$white;
+			padding-top:35px;
+			.t-tit{
+				color:$tcolorb;
+			}
+		}
+		.r-b{
+			height:380px;
+			padding-top:35px;
+		}
+	}
+	.clear{
+		clear:both;
+		float:none;
+	}
+}
+// up end;
+
+// list start;
+.list{
+	width:100%;
+	height:auto;
+	margin: 45px 0;
+	.inner{
+		overflow: hidden;
+		height:auto;
+		.li-list{
+			float:left;
+			width:calc(33.33% - 27px);
+			margin-right:40px;
+			overflow:hidden;
+			&:last-child{
+				margin-right: 0;
+			}
+			a{
+				display: block;
+			}
+			.pic{
+				width:100%;
+				position:relative;
+				height:auto;
+				z-index: 1;
+				img{
+					transition: all 0.5s ease 0s;
+					height:auto;
+				}
+			}
+			.mask{
+				transition: all 0.3s ease 0s;
+				position: absolute;
+				width:100%;
+				z-index: 2;
+				height: 100%;
+				background: rgba(0,0,0,0);
+				height:100%;
+				left:0;
+				top:0;
+			}
+			.intro{
+				width:100%;
+				height:130px;
+				background:rgba(0,0,0,0.5);
+				color:$white;
+				position:absolute;
+				bottom:0;
+				left:0;
+				padding:20px 40px 0 25px;
+				.name{
+					font-size: 22px;
+				}
+			}
+			&:hover{
+				.pic{
+					img{
+						transform: scale(1.05,1.05);
+					}
+				}
+				.mask{
+					background:rgba(0,0,0,0.5);
+				}
+			}
+		}
+	}
+}
+// list end;
+
 // media query;
 @media only screen and (max-width: 1200px){
 	.header-pc{
@@ -1332,6 +1498,83 @@ img{
 					font-size: 14px;
 					line-height: 28px;
 					margin-bottom:40px;
+				}
+			}
+		}
+	}
+	.up{
+		height:900px;
+		.left{
+			.name{
+				padding-top:140px;
+				font-size:24px;
+				padding-bottom:20px;
+			}
+			.pic{
+				height:450px;
+			}
+			.intro{
+				font-size:14px;
+				line-height: 28px;
+				padding:10px 15px;
+				height:300px;
+			}
+		}
+		.center{
+			.tit{
+				height:135px;
+			}
+			.cen-intro{
+				font-size: 14px;
+				line-height: 28px;
+				padding:0 15px;
+			}
+		}
+		.right{
+			width:33.33%;
+			float: left;
+			position:static;
+			left:auto;
+			top:auto;
+			background:none;
+			.r-t,.r-c,.r-b{
+				padding-top:125px;
+				height:33.33%;
+				p{
+					padding:0 15px;
+					width:auto;
+					line-height:28px;
+					font-size:14px;
+				}
+			}
+			.r-c,.r-b{
+				padding-top:30px;
+			}
+		}
+	}
+	.fload{
+		.inner{
+			padding:60px 20px;
+			.pro{
+				.pic{
+					width:50%;
+					margin-right:0;
+				}
+				.intro{
+					width:50%;
+					margin-top:20px;
+					padding-left:20px;
+				}
+				&:nth-of-type(2){
+					margin-top:20px;
+					.pic{
+						width:50%;
+						margin-right:0;
+					}
+					.intro{
+						width:50%;
+						margin-top:20px;
+					}
 				}
 			}
 		}
@@ -1428,6 +1671,15 @@ img{
 			}
 			.right{
 				display: none;
+			}
+		}
+	}
+	.list{
+		.inner .li-list .intro{
+			height:120px;
+			padding:10px 10px 0 10px;
+			.name{
+				font-size:18px;
 			}
 		}
 	}
@@ -1672,6 +1924,111 @@ img{
 				.l-in{
 					line-height: 26px;
 				}
+			}
+		}
+	}
+	.up{
+		height:auto;
+		.left,.center,.right{
+			float:none;
+			width:100%;
+			height:auto;
+		}
+		.left{
+			background:$backg;
+			.name{
+				background: $backg;
+				color:$white;
+				text-align:center;
+				padding-top:30px;
+			}
+			.pic{
+				width:80%;
+				margin:0 auto;
+				max-width:40%;
+				border-radius:20px;
+				overflow:hidden;
+				height:auto;
+				img{
+					height: auto;
+				}
+			}
+			.intro{
+				padding-bottom:20px;
+				height:auto;
+			}
+		}
+		.center{
+			padding-bottom:20px;
+			.tit{
+				height:auto;
+				padding-bottom:20px;
+			}
+		}
+		.right{
+			.r-t,.r-c,.r-b{
+				padding-top:25px;
+				height:auto;
+				padding-bottom:10px;
+				.tit{
+					text-align: center;
+				}
+			}
+		}
+	}
+	.list{
+		.inner{
+			.li-list{
+				float:none;
+				display: block;
+				width:80%;
+				margin:20 auto;
+				max-width:400px;
+				&:last-child{
+					margin:0 auto;
+				}
+			}
+		}
+	}
+	.fload{
+		.inner{
+			padding:20px;
+			.pro{
+				.pic{
+					float:none;
+					width:80%;
+					max-width: 400px;
+					margin:0 auto;
+				}
+				.intro{
+					text-align:center;
+					width:100%;
+					margin:20px auto;
+					max-width: 768px;
+					padding:0 20px;
+					a{
+						margin:20px auto;
+					}
+				}
+				&:nth-of-type(2){
+					.pic{
+						float:none;
+						width:80%;
+						max-width: 400px;
+						margin:0 auto;
+					}
+					.intro{
+						text-align:center;
+						width:100%;
+						margin:20px auto;
+						max-width: 768px;
+						padding:0 20px;
+					}
+				}
+			}
+			.tobuy{
+				margin:15px auto 0;
+				font-size:20px;
 			}
 		}
 	}
