--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -1711,6 +1711,29 @@ img{
 }
 // form-vo end;
 
+// center start;
+.center{
+	width:100%;
+	height:auto;
+	min-height:50%;
+	margin-bottom:50px;
+	.in-tit{
+		font-size: 30px;
+		margin:35px 0 50px 0;
+		color:$tcolorb;
+		text-align:center;
+	}
+	.in-cont{
+		font-size:14px;
+		line-height: 34px;
+		color:$tcolorg;
+		p{
+			text-indent: 2em;
+		}
+	}
+}
+// center end;
+
 // media query;
 @media only screen and (max-width: 1200px){
 	.header-pc{
@@ -2466,6 +2489,13 @@ img{
 					}
 				}
 			}
+		}
+	}
+	.center {
+		padding:0 20px;
+		.in-tit{
+			font-size: 22px;
+			margin:20px 0;
 		}
 	}
 }
