--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -1734,6 +1734,288 @@ img{
 }
 // center end;
 
+// ban start;
+.ban{
+	width:100%;
+	height:auto;
+	img{
+		height:auto;
+	}
+}
+// ban end; 
+
+// box start;
+.box{
+	width:100%;
+	height:auto;
+	background-size:cover;
+	margin-top:70px;
+	.box-list{
+		width:100%;
+		overflow:hidden;
+		li{
+			float:left;
+			width:20%;
+			padding:5px;
+			position:relative;
+			.pic{
+				width:100%;
+				height:auto;
+				img{
+					height:auto;
+				}
+			}
+			.title{
+				color:#ffeb89;
+				font-size:36px;
+				height:100%;
+				position:absolute;
+				top:0;
+				left:0;
+				text-align: center;
+			    margin-top: calc(50% - 18px);
+    			width: 100%;
+			}
+		}
+	}
+	.card{
+		width:100%;
+		height:705px;
+		background:url(../img/cardbg.png) no-repeat center center;
+		background-size:cover;
+		margin-top: 90px;
+		position: relative;
+		.triange{
+			width: 0px;
+		    height: 0px;
+		    border-left: 90px solid transparent;
+		    border-right: 90px solid transparent;
+		    border-bottom: 70px solid #e2d147;
+		    position: absolute;
+		    top: -70px;
+		    left: 140px;
+		}
+		ul{
+			width:100%;
+			max-width: 1400px;
+			margin:0 auto;
+			overflow-x:auto;
+			overflow-y: hidden;
+			height:420px;
+			position: relative;
+			.bdt{
+				width:100%;
+				height:2px;
+				background:#6d200a;
+				position: absolute;
+				top:20px;
+				left:0;
+			}
+
+			li{
+				width:218px;
+				height:auto;
+				position: relative;
+				margin-top:50px;
+				float:left;
+				.pic{
+					width:100%;
+					height:auto;
+					position: relative;
+					
+					img{
+						height:auto;
+					}
+				}
+				.info{
+					position:absolute;
+					top:235px;
+					left:60px;
+					z-index: 3;
+					color:$white;
+					font-size:18px;
+					line-height: 24px;
+				 	overflow: hidden;
+				    display: -webkit-box;
+				    -webkit-line-clamp: 4;
+				    -webkit-box-orient: vertical;
+				    word-break: break-all;
+				    width:105px;
+				}
+			}
+		}
+	}
+	.cardsm{
+		margin-top:30px;
+		width:100%;
+		height:auto;
+		.pic{
+			width:70px;
+			height:auto;
+			margin:0 auto;
+			img{
+				height:auto;
+			}
+		}
+		.sendbtn{
+			width:371px;
+			height:83px;
+			text-align: center;
+			line-height:83px;
+			color:#ffec8a;
+			font-size: 36px;
+			margin:18px auto;
+			cursor: pointer;
+			background:url('../img/writebg.png') no-repeat center center;
+			border-radius:10px;
+
+		}
+	}
+}
+// box end;
+
+// alert start;
+.mask-all{
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background:rgba(0,0,0,0.5);
+	z-index: 10001;
+	display:none;
+}
+.alert-write{
+	display:none;
+	width:800px;
+	height:400px;
+	position:fixed;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+	margin:auto;
+	background:url(../img/writebg.png) no-repeat 100% 100%;
+	z-index: 10004;
+	border-radius:10px;
+	.title{
+		padding-top:50px;
+		text-align: center;
+		font-size: 36px;
+		color:#ffec89;
+	}
+	.words{
+		width:80%;
+		height:200px;
+		margin:30px auto;
+		resize: none;
+		line-height: 30px;
+		font-size: 20px;
+		background:rgba(255,255,255,0.5);
+		display: block;
+		color:#ffec89;
+		padding:10px;
+	}
+	.over{
+		width:105px;
+		height:30px;
+		color:#ff3d05;
+		font-size: 16px;
+		line-height: 30px;
+		margin-right: 10%;
+		font-weight: bold;
+		cursor: pointer;
+		float:right;
+		background: url(../img/overbg.png) no-repeat 100% 100%;
+		border-radius:10px;
+	}
+}
+.alert-pay{
+	display:none;
+	width:100%;
+	max-width:800px;
+	height:80%;
+	overflow-y:auto;
+	padding:20px;
+	position: fixed;
+	left:0;
+	top:0;
+	right:0;
+	bottom:0;
+	margin:auto;
+	background:$footbg;
+	border-radius:10px;
+	z-index: 10002;
+	.al-pay-tit{
+		font-size: 30px;
+		line-height: 30px;
+		color:$tcolorb;
+	}
+	.pay-list{
+		width:90%;
+		height:auto;
+		margin:0 auto;
+		overflow:hidden;
+		.left,.right{
+			float:left;
+			width:50%;
+			margin-top:30px;
+			.pic{
+				width:60%;
+				height:auto;
+				margin: 0 auto;
+				img{
+					height:auto;
+				}
+			}
+			.title{
+				font-size:22px;
+				height:44px;
+				line-height: 44px;
+				margin-top:30px;
+				text-align: center;
+				.wchat::before{
+					content:'\e604';
+					color:#1ac81b;
+					line-height: 44px;
+					margin-right:10px;
+				}
+				.ali::before{
+					content:'\e626';
+					color:#02a9f0;
+					line-height: 44px;
+					margin-right:10px;
+				}
+			}
+		}
+		.right{
+			float: right;
+		}
+	}
+	.information{
+		font-size: 14px;
+		line-height: 24px;
+		text-align: center;
+		p{
+			margin-top:25px;
+		}
+	}
+	.close-pay{
+		width:50px;
+		height:50px;
+		position:absolute;
+		right:10px;
+		top:10px;
+		z-index: 10003;
+		.c-pay::before{
+			content:'\e644';
+			font-size:36px;
+			color:$tcolord;
+		}
+	}
+}
+// alert end;
+
 // media query;
 @media only screen and (max-width: 1200px){
 	.header-pc{
@@ -2498,6 +2780,9 @@ img{
 			margin:20px 0;
 		}
 	}
+	.alert-pay{
+		height:60%;
+	}
 }
 @media only screen and (max-width: 440px){
 	.tit{
@@ -2766,6 +3051,16 @@ img{
 					}
 
 				}
+			}
+		}
+	}
+	.alert-pay{
+		height:100%;
+		.pay-list{
+			.left,.right{
+				float:none;
+				width:80%;
+				margin:20px auto 0;
 			}
 		}
 	}
