--- a/src/scss/public.scss
+++ b/src/scss/public.scss
@@ -55,6 +55,23 @@ body{
 		transform: translateY(20px);	
 	}
 }
+@keyframes shake{
+	0%{
+		transform: rotate(0deg);
+	}
+	25%{
+		transform: rotate(5deg);
+	}
+	50%{
+		transform: rotate(0deg);
+	}
+	75%{
+		transform: rotate(-5deg);
+	}
+	100%{
+		transform: rotate(0deg);		
+	}
+}
 img{
 	width:100%;
 	height:100%;
@@ -119,7 +136,7 @@ img{
 		li{
 			padding:0 25px;
 			font-size:18px;
-			font-weight: bold;
+			// font-weight: bold;
 			color:$tcolorb;
 			line-height: 100px;
 			float:left;
@@ -1753,11 +1770,13 @@ img{
 	.box-list{
 		width:100%;
 		overflow:hidden;
+		position: relative;
 		li{
 			float:left;
 			width:20%;
 			padding:5px;
 			position:relative;
+			cursor: pointer;
 			.pic{
 				width:100%;
 				height:auto;
@@ -1778,23 +1797,23 @@ img{
 			}
 		}
 	}
+	.triange{
+		width: 0px;
+	    height: 0px;
+	    border-left: 90px solid transparent;
+	    border-right: 90px solid transparent;
+	    border-bottom: 70px solid #e2d147;
+	    position: absolute;
+	    bottom: -91px;
+	    left:20px;
+	}
 	.card{
 		width:100%;
 		height:705px;
 		background:url(../img/cardbg.png) no-repeat center center;
 		background-size:cover;
 		margin-top: 90px;
-		position: relative;
-		.triange{
-			width: 0px;
-		    height: 0px;
-		    border-left: 90px solid transparent;
-		    border-right: 90px solid transparent;
-		    border-bottom: 70px solid #e2d147;
-		    position: absolute;
-		    top: -70px;
-		    left: 140px;
-		}
+		position: relative;	
 		ul{
 			width:100%;
 			max-width: 1400px;
@@ -1808,7 +1827,7 @@ img{
 				height:2px;
 				background:#6d200a;
 				position: absolute;
-				top:20px;
+				top:70px;
 				left:0;
 			}
 
@@ -1818,6 +1837,10 @@ img{
 				position: relative;
 				margin-top:50px;
 				float:left;
+				&:hover{
+					animation: shake 0.3s 1 ease;
+					transform-origin:50% 20%;
+				}
 				.pic{
 					width:100%;
 					height:auto;
@@ -1857,20 +1880,22 @@ img{
 				height:auto;
 			}
 		}
-		.sendbtn{
-			width:371px;
-			height:83px;
-			text-align: center;
-			line-height:83px;
-			color:#ffec8a;
-			font-size: 36px;
-			margin:18px auto;
-			cursor: pointer;
-			background:url('../img/writebg.png') no-repeat center center;
-			border-radius:10px;
-
-		}
 	}
+}
+.sendbtn{
+	width:371px;
+	height:83px;
+	text-align: center;
+	line-height:83px;
+	color:#ffec8a;
+	font-size: 36px;
+	margin:18px auto;
+	cursor: pointer;
+	background:url('../img/writebg.png') no-repeat center center;
+	border-radius:10px;
+}
+#sendPh{
+	display:none;
 }
 // box end;
 
@@ -2000,18 +2025,18 @@ img{
 			margin-top:25px;
 		}
 	}
-	.close-pay{
-		width:50px;
-		height:50px;
-		position:absolute;
-		right:10px;
-		top:10px;
-		z-index: 10003;
-		.c-pay::before{
-			content:'\e644';
-			font-size:36px;
-			color:$tcolord;
-		}
+}
+.close-pay,.close-write{
+	width:50px;
+	height:50px;
+	position:absolute;
+	right:10px;
+	top:10px;
+	z-index: 10003;
+	.c-pay::before{
+		content:'\e644';
+		font-size:36px;
+		color:$tcolord;
 	}
 }
 // alert end;
@@ -2340,7 +2365,19 @@ img{
 				margin-top:40px;
 				width:75%;
 			}
-		} 
+		}  
+	}
+	.box{
+		.triange{
+			display: none;
+		}
+		.box-list{
+			li{
+				.title{
+					font-size: 26px;
+				}
+			}
+		}
 	}
 }
 @media only screen and (max-width:768px){
@@ -2783,6 +2820,29 @@ img{
 	.alert-pay{
 		height:60%;
 	}
+	.box{
+		.triange{
+			display: none;
+		}
+		.card{
+			display: none;
+		}
+		#sendPh{
+			display: block;
+			width:200px;
+			height:50px;
+			font-size: 26px;
+			line-height: 50px;
+		}
+	}
+	.alert-write{
+		width:100%;
+		height:100%;
+		background-size:cover;
+		.words{
+			height:60%;
+		}
+	}
 }
 @media only screen and (max-width: 440px){
 	.tit{
@@ -3061,6 +3121,16 @@ img{
 				float:none;
 				width:80%;
 				margin:20px auto 0;
+			}
+		}
+	}
+	.box{
+		.box-list {
+			li{
+				float:none;
+				width:100%;
+				padding:10px 40px;
+				font-size: 36px;
 			}
 		}
 	}
